# Jobly

./: .dockerignore  .env.example  .gitignore  AWS_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  DEPLOY_CHECKLIST.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  apprunner.yaml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  apprunner.yaml  pyproject.toml
backend/jobly/agents/: analytics_agent.py  application_agent.py  assessment_agent.py  base.py  contact_discovery_agent.py  cover_letter_agent.py  dedup_agent.py  email_monitor_agent.py  error_handler_agent.py  followup_agent.py  interview_prep_agent.py  job_ranker_agent.py  job_search_agent.py  offer_eval_agent.py  outreach_writer_agent.py  profile_agent.py  resume_tailor_agent.py  tracker_agent.py
backend/jobly/api/: deps.py  main.py
backend/jobly/auth/: __init__.py  jwt_handler.py  models.py  password.py
backend/jobly/config/: prompts.py  settings.py
backend/jobly/memory/: database.py  shared_memory.py  sqlite_store.py  vector_store.py
backend/jobly/models/: database.py  enums.py  schemas.py
backend/jobly/orchestrator/: approval_gates.py  coordinator.py  state_machine.py
backend/jobly/services/: analytics_service.py  document_service.py  job_service.py  outreach_service.py  profile_service.py  user_service.py
backend/jobly/tools/: doc_generator.py  gmail_client.py  linkedin_client.py  pdf_parser.py  rate_limiter.py  web_scraper.py
backend/jobly/ui/cli/: main.py  (+2 more)
backend/jobly/utils/: helpers.py  llm.py  logger.py  validators.py
backend/jobly/workflows/: __init__.py  approval_gate.py  workflow_manager.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_cover_letter_agent.py  test_dedup_agent.py  test_job_ranker.py  test_profile_agent.py
backend/tests/test_auth/: test_password.py
(+66 files in other folders)
